--- a/css/style2.css
+++ b/css/style2.css
@@ -175,6 +175,332 @@ a {
   color: #fff;
 }
 
+/* ================================================== */
+/* Ex13_beforeAfter.html */
+
+.gnb13{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 15px 15px 0px 15px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 0 40px rgba(0, 0,   , 0.2);
+}
+
+.gnb13 a{ 
+  display: inline-block;
+  width: 120px;
+  height: 40px;
+  line-height: 30px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  
+}
+.gnb13 a span{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: 0.3s;
+}
+
+.gnb13 a span:nth-child(1){
+  top: 0;
+  left: 0;
+}
+
+.gnb13 a span:nth-child(2){
+  top: 100%;
+  left: 0;
+  color: yellowgreen;
+}
+
+.gnb13 a:hover span:nth-child(1){
+  top: -100%;
+}
+.gnb13 a:hover span:nth-child(2){
+  top: 0;
+}
 
 
+/* ================================================== */
+/* Ex14_input.html */
 
+
+.info14{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.item14{
+  width: 300px;
+  margin-bottom: 10px;
+  position: relative;
+}
+.item14 input{
+  border: 1px solid lightgray;
+  width: inherit;
+  height: 40px;
+  border-radius: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+  padding-left: 50px;
+  outline: none;
+  transition: 0.3s;
+}
+
+.item14 .fa{
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: gray;
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  transition: 0.3s;
+}
+
+.item14 input:focus{
+  border: 1px solid dodgerblue;
+  box-shadow: 0 0 5px dodgerblue;
+}
+
+.item14 input:focus + .fa{
+  color: dodgerblue;
+}
+
+.item14 input:focus::placeholder {
+  visibility: hidden;
+}
+
+
+/* ================================================== */
+/* Ex15_progressBar.html */
+
+
+.skill-progress{
+  width: 400px;
+  padding: 20px;
+  background-color: #333;
+  border-radius: 10px;
+  color: #Fff;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.skill-progress h1{
+  text-align: center;
+  font-size: 25px;
+}
+
+.item15{
+ 
+}
+
+.item15 p{
+  overflow: hidden;
+  margin: 15px 0px 5px 0px;
+}
+
+.item15 p span:nth-child(1){
+  float: left;
+}
+
+.item15 p span:nth-child(2){
+  float: right;
+}
+
+.progress{
+  border: 1px solid #6cd4c4;
+  padding: 3px;
+  border-radius: 3px;
+
+}
+
+.progress-level{
+  height: 10px;
+  background: linear-gradient(90deg, crimson, gold);
+  animation: ani15 1s linear;
+  animation-fill-mode: both;
+}
+ 
+@keyframes ani15 {
+  0%{width: 0;}
+}
+
+.skill-progress .item15:nth-of-type(1) .progress-level{
+  animation-delay: 0s;
+}
+
+.skill-progress .item15:nth-of-type(2) .progress-level{
+  animation-delay: 0.1s;
+}
+
+.skill-progress .item15:nth-of-type(3) .progress-level{
+  animation-delay: 0.2s;
+}
+
+.skill-progress .item15:nth-of-type(4) .progress-level{
+  animation-delay: 0.3s;
+}
+
+.skill-progress .item15:nth-of-type(5) .progress-level{
+  animation-delay: 0.4s;
+}
+
+
+/* ================================================== */
+/* Ex16_layout.html */
+
+.gallery16{
+  list-style: none;
+  display: flex;
+  height: 100vh;
+}
+
+.gallery16 li{
+  border-right: 5px solid black;
+  flex: 1;
+  transition: 0.5s;
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery16 li:last-child{
+  border: none;
+}
+
+.gallery16 li:nth-child(1){
+  background: url(../images/artistic-image-01.jpg) no-repeat center center;
+}
+
+.gallery16 li:nth-child(2){
+  background: url(../images/artistic-image-02.jpg) no-repeat center center;
+}
+
+.gallery16 li:nth-child(3){
+  background: url(../images/artistic-image-03.jpg) no-repeat center center;
+}
+
+.gallery16 li:nth-child(4){
+  background: url(../images/artistic-image-04.jpg) no-repeat center center;
+}
+
+.gallery16 li:nth-child(5){
+  background: url(../images/artistic-image-05.jpg) no-repeat center center;
+}
+
+.gallery16:hover li{
+  flex: 1;
+}
+.gallery16 li:hover {
+  flex: 3;
+  filter: grayscale();
+}
+
+.content16 p{
+  display: inline-block;
+  margin: 20px;
+}
+
+.content16{
+  position: absolute;
+  background-color: #000;
+  color: #fff;
+  height: 250px;
+  bottom: -320px;
+  text-align: center;
+  transition: 0.5s;
+  padding: 20px;
+  padding-top: 50px;
+  box-sizing: border-box;
+}
+
+.content16:before{
+  content: "";
+  position: absolute;
+  background-color: #000;
+  width: 100%;
+  height: 70px;
+  left: 0;
+  top: -10px;
+  transform-origin: left bottom;
+  transform: rotate(-5deg) scale(1.3);
+}
+
+.sns16 a{
+  color: white;
+}
+
+.gallery16 li:hover .content16{
+  transition-delay: 0.5s;
+  bottom: 0;
+}
+
+
+/* ================================================== */
+/* Ex17_button.html */
+
+.container17{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* 인풋타입이 사라져도 라벨링한 span태그 들이 역할을 대신한다. */
+input[id=trigger17] {
+  display: none;
+}
+
+label[for=trigger17] {
+  /* border: 1px solid #000; */
+  width: 40px;
+  height: 30px;
+  display: block;
+  position: relative;
+}
+
+label[for=trigger17] span{
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  transition: 0.5s;
+}
+
+label[for=trigger17] span:nth-child(1){
+  top: 0;
+  
+}
+
+label[for=trigger17] span:nth-child(2){
+  top: 50%;
+}
+
+label[for=trigger17] span:nth-child(3){
+  top: 100%;
+}
+
+input[id=trigger17]:checked + label[for=trigger17] span:nth-child(1){
+  top: 50%;
+  transform: rotate(45deg);
+}
+
+input[id=trigger17]:checked + label[for=trigger17] span:nth-child(2){
+  opacity: 0;
+}
+
+input[id=trigger17]:checked + label[for=trigger17] span:nth-child(3){
+  top: 50%;
+  transform: rotate(-45deg);
+}
