--- a/css/style3.css
+++ b/css/style3.css
@@ -6,7 +6,7 @@
     /* Google Web Font */
     @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
     
- 
+    @import url('https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css');
     
 
 body {
@@ -197,4 +197,309 @@ a {
 
 input[id=chk26]:checked ~ label[for=chk26] em::before{
   left: -50%;
+}
+
+
+/* ================================================== */
+/* Ex27_form.html */
+
+.container27{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+form input[type=checkbox]{
+  display: none;
+}
+
+form label {
+  cursor: pointer;
+  display: block;
+}
+
+form label::before {
+  content: "\f00c";
+  font-family: fontawesome;
+  border: 1px solid #000;
+  width: 16px;
+  height: 16px;
+  border-radius: 3px;
+  margin-right: 5px;
+  font-size: 13px;
+  display: inline-block;
+  text-align: center;
+  line-height: 16px;
+  vertical-align: middle;
+  color: transparent;
+  transition: 0.2s;
+}
+
+input[type=checkbox]:checked + label::before{
+  background-color: crimson;
+  color: white;
+  border-color: transparent;
+}
+
+input[type=checkbox] + label:active:before{
+  transform: scale(0);
+}
+
+
+/* ================================================== */
+/* Ex28_hover.html */
+
+.card img{
+  width: 300px;
+  height: 400px;
+}
+
+.container28{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.card{
+ margin: 10px;
+ position: relative;
+ width: 300px;
+ height: 400px;
+ overflow: hidden;
+ transition: .5s;
+}
+
+.conten{
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding: 20px;
+  box-sizing: border-box;
+  width: inherit;
+  height: inherit;
+  color: white;
+  padding-top: 180px;
+  text-align: center;
+  transition: .5s;
+}
+
+.card:nth-child(1) .conten{
+  background: linear-gradient(to top, crimson, transparent);
+}
+.card:nth-child(2) .conten{
+  background: linear-gradient(to top, dodgerblue, transparent);
+}
+.card:nth-child(3) .conten{
+  background: linear-gradient(to top, yellowgreen, transparent);
+}
+
+.conten h2{
+  
+}
+.conten h2 span{
+  margin-top: 7px;
+  display: block;
+  color: gold;
+  font-size: 15px;
+}
+
+.conten p{
+  display: inline-block;
+  margin: 15px 0px;
+}
+
+.sns a{
+  color: white;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  line-height: 20px;
+
+}
+
+.card:hover .conten{
+  top:0;
+}
+
+.card:hover {
+  transform: translateY(-20px);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.338);
+}
+
+
+/* ================================================== */
+/* Ex29_searchBar.html */
+
+.body{
+  position: relative;
+  height: 100VH;
+  background: url(../images/snow.jpg) no-repeat center center fixed;
+}
+
+.body:before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.search {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.search h1 {
+  color: white;
+  text-align: center;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.search input[type=text]{
+  width: 350px;
+  padding: 20px;
+  border: none;
+  margin-right: -6px;
+  border-radius: 40px 0px 0px 40px;
+  outline: none;
+  padding-left: 40px;
+  box-sizing: border-box;
+
+}
+
+.search input[type=submit]{
+  width: 100px;
+  padding: 20px;
+  border: none;
+  border-radius: 0px 40px 40px 0px;
+  cursor: pointer;
+  background-color: orange;
+  color: white;
+  outline: none;
+  box-sizing: border-box;
+}
+
+.search input[type=submit]:hover {
+  background-color: darkgoldenrod;
+}
+
+.search input[type=text]::placeholder {
+  font-size: 20px;
+}
+
+
+/* ================================================== */
+/* Ex30_login.html */
+
+.body30{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.login{
+  width: 800px;
+  background-color: #f5f5f5;
+  border: 1px solid #eee;
+  border-radius: 5px;
+  padding: 25px;
+  box-sizing: border-box;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+}
+
+.login span{
+  font-weight: bold;
+  display: block;
+  margin: 20px 0px;
+}
+
+.login input[type=email],
+.login input[type=password]{
+  width: 100%;
+  padding: 15px;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding-left: 50px;
+  outline: none;
+}
+
+.email30, .passwd30{
+  position: relative;
+}
+
+.login i{
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  font-size: 20px;
+  text-align: center;
+  line-height: 45px;
+  margin: 0px 5px;
+}
+
+.login p {
+  overflow: hidden;
+  margin: 20px 0px;
+}
+
+.login p label{
+  float: left;
+  cursor: pointer;
+}
+
+.login p a{
+  float: right;
+}
+
+.login p a:hover{
+  text-decoration: underline;
+}
+
+button{
+  margin-top: 10px;
+  width: 300px;
+  padding: 15px;
+  background-color: #2991b1;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+button:hover{
+  background-color: #2c778e;
+}
+
+.login input[type=email]:hover,
+.login input[type=password]:hover{
+  border: 1px solid dodgerblue;
+  box-shadow: 0 0 5px dodgerblue;
+}
+
+.login input[type=email]::placeholder,
+.login input[type=password]::placeholder{
+  opacity: 1;
+  transition: 0.3s;
+}
+
+.login input[type=email]:focus::placeholder,
+.login input[type=password]:focus::placeholder{
+  visibility: hidden;
+  opacity: 0;
 }
