--- a/css/style4.css
+++ b/css/style4.css
@@ -141,3 +141,305 @@ a {
   color: gold;
   text-shadow: 0 0 5px gold;
 }
+
+
+/* ================================================== */
+/* Ex04_tabMenu.html */
+
+section{
+  width: 800px;
+}
+.container04{
+}
+
+section input{
+  margin: 30px 0px;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn-04{
+  list-style: none;
+  overflow: hidden;
+  width: 500px;
+  display: flex;
+}
+.btn-04 li{
+  flex: 1;
+  float: left;
+  background-color: #ccc;
+  cursor: pointer;
+  border-left: 1px solid #aaa;
+  text-align: center;
+  transition: 0.3s;
+}
+
+.btn-04 li:nth-child(5){
+  flex: 2;
+}
+
+.btn-04 li.active{
+  background-color: #fff;
+  border-top: 4px solid crimson;
+}
+
+.tabs{
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.tabs div{
+  display: none;
+}
+
+.tabs div h2{
+  margin: 50px 0 30px 0;
+  text-align: center;
+}
+
+.tabs div img{
+  width: 150px;
+  height: 180px;
+  float: left;
+  margin: 0 20px 60px 20px;
+}
+
+.tabs div.active {
+  display: block;
+}
+
+.tabs p{
+  margin-bottom: 20px;
+}
+
+
+/* ================================================== */
+/* Ex05_hover.html */
+
+.container05{
+  /* position: relative; */
+}
+.navi{
+  position: relative;
+  z-index: 1;
+}
+.navi li{
+  list-style: none;
+}
+.navi li a{
+  font-size: 60px;
+  color: #fff;
+  line-height: 80px;
+  font-weight: bold;
+  position: relative;
+}
+
+.navi li a:before{
+  content: attr(data-text);
+  position: absolute;
+  color: yellowgreen;
+  top: 0;
+  left: 0;
+  width: 0%;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.navi li a:hover::before{
+  width: 100%;
+}
+
+.photo{
+  background-image: url(../images/img1.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+
+
+/* ================================================== */
+/* Ex06_hover.html */
+
+
+.item06{
+  /* border: 1px solid #000; */
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+}
+.item06 img{
+  transition: 0.5s;
+}
+.item06 .detail{
+  position: absolute;
+  background-color: #f8f8f8;
+  width: 100%;
+  height: 100%;
+  bottom: -395px;
+  left: 0;
+  transition: .5s;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+
+/* 타이틀 */
+
+
+.title06{
+  overflow: hidden;
+  border-bottom: 1px solid #ddd;
+}
+
+.title06 h2 {
+  font-size: 16px;
+  color: #555;
+  float: left;
+  
+}
+.title06 h2 em{
+  display: block;
+  color: #888;
+  font-style: normal;
+  margin-bottom: 10px;
+}
+
+.title06 span{
+  float: right;
+  margin-top: 2px;
+  font-weight: bold;
+  color: crimson;
+  font-size: 20px;
+}
+
+
+/* 인포 */
+
+.info06 {
+  position: relative;
+}
+
+.size{}
+.size h2{
+  display: block;
+  font-size: 16px;
+  margin-top: 7px;
+}
+.size span{
+  display: inline-block;
+  font-size: 12px;
+  width: 16px;
+  height: 16px;
+  text-align: center;
+  line-height: 12px;
+  font-weight: bold;
+  margin: 0 0 7px 0;
+  transition: 0.3s;
+  padding: 3px;
+  cursor: pointer;
+}
+
+.colors{}
+.colors h2{
+  font-size: 16px;
+}
+.colors span{
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  margin: 3px 0 12px 0;
+  transition: 00.3s;
+  cursor: pointer;
+}
+
+.colors span:nth-of-type(1){
+  background-color: crimson;
+}
+.colors span:nth-of-type(2){
+  background-color: orange;
+}
+.colors span:nth-of-type(3){
+  background-color: yellowgreen
+}
+.colors span:nth-of-type(4){
+  background-color: dodgerblue
+}
+.colors span:nth-of-type(5){
+  background-color: plum;
+}
+
+.add{
+  width: 100%;
+  height: 35px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+
+
+/* 좋아요 */
+
+.like{
+
+}
+
+.like::before{
+  content: '\f08a';
+  font-family: fontawesome;
+  color: #ddd;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.like.active:before{
+  content: '\f004';
+  font-family: fontawesome;
+  color: crimson;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
+
+/* 기능 */
+
+.item06:hover .detail{
+  bottom: -45%;
+}
+
+
+.item06:hover img{
+  filter: blur(2px);
+}
+
+.size span:hover{
+  color: white;
+  background-color: #000;
+  border-radius: 5px;
+}
+
+.size span.active{
+  color: white;
+  background-color: #000;
+  border-radius: 5px;
+}
+
+.colors span:hover{
+  border-radius: 50%;
+}
+
+.colors span.active{
+  border-radius: 50%;
+}
