--- a/css/style4.css
+++ b/css/style4.css
@@ -7,7 +7,20 @@
     @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
     
     @import url('https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css');
-    
+
+
+
+    /* font-family: 'Montserrat', sans-serif; */
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+
+    /* font-family: 'Monoton', cursive; */
+    @import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+
+
+    /* font-family: 'Raleway', sans-serif; */
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 
 body {
   font-family: 'Raleway', sans-serif;
@@ -152,7 +165,8 @@ section{
 .container04{
 }
 
-section input{
+/* 9번예제 때문에 수정합니다. */
+sectioninput{
   margin: 30px 0px;
   padding: 10px;
   width: 100%;
@@ -442,4 +456,124 @@ section input{
 
 .colors span.active{
   border-radius: 50%;
+}
+
+
+/* ================================================== */
+/* Ex08_video.html */
+
+.container{}
+header{
+  border-bottom: 1px solid lightgrey;
+  background-color: white;
+  height: 60px;
+  text-align: center;
+  padding-top: 13px;
+  box-sizing: border-box;
+}
+
+section{
+  border: 1px solid red;
+  box-sizing: border-box;
+  width: 100%;
+  height: calc(100vh - 60px);
+  position: relative;
+}
+
+.login09{
+  width: 360px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.login-type{}
+.login-type h1{
+  margin-bottom: 20px;
+  font-size: 38px;
+  text-align: center;
+  font-weight: normal;
+}
+
+.btn09{
+  border: 1px solid lightgray;
+  display: block;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  border-radius: 3px;
+  margin-bottom: 15px;
+  font-size: 18px;
+  color: white;
+  opacity: 0.8;
+}
+
+.btn09:hover{
+  opacity: 1;
+}
+
+.btn09:nth-of-type(1){
+  color: #222;
+  background:#fff url(../images/logo-mobile.png) no-repeat center left 13px;
+}
+.btn09:nth-of-type(2){
+  background:#898c9b url(../images/logo-email.png) no-repeat center left 13px;
+}
+.btn09:nth-of-type(3){
+  background:#11ce00 url(../images/logo-naver.png) no-repeat center left 13px;
+}
+.btn09:nth-of-type(4){
+  background:#0076fe url(../images/logo-facebook.png) no-repeat center left 13px;
+}
+.btn09:nth-of-type(5){
+  background:#00c026 url(../images/logo-line.png) no-repeat center left 13px;
+}
+
+.or{
+  display: block;
+  margin: 20px 0;
+  text-align: center;
+  position: relative;
+}
+
+.or::before,
+.or::after{
+  content: "";
+  position: absolute;
+  background-color: lightgray;
+  height: 1px;
+  width: 44%;
+  top: 50%;
+
+}
+
+.or::before{
+  left: 0;
+}
+
+.or::after{
+  right: 0;
+}
+
+
+
+.login-footer{}
+
+.login-footer label{
+  cursor: pointer;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.login-footer p{
+  text-align: center;
+}
+
+.login-footer p a{
+  font-weight: bold;
+}
+
+.login-footer p a:hover{
+ text-decoration: underline;
 }
